# calculator

./: AST.c  AST.h  ASTEval.c  ASTEval.h  ASTNodePull.c  ASTNodePull.h  ArcGamma.c  ArcGamma.h  CMakeLists.txt  Definitions.h  EnumTypeMaps.h  Enums.c  Enums.h  Error.c  Error.h  Globals.c  Globals.h  Lexer.c  Lexer.h  LexerToken.c  LexerToken.h  Murmur3.c  Murmur3.h  MyMath.c  MyMath.h  Parser.c  Parser.h  RBT.c  RBT.h  Utils.c  Utils.h  main.c
